force-app/main/default/objects/KT_Signature_Request__c/KT_Signature_Request__c.object-meta.xml
<CustomObject>
    <description>E-signature workflow for a document vault entry. Tracks provider, signing order, expiry, and overall completion.</description>
    <label>KT Signature Request</label>
    <nameField>
        <displayFormat>SREQ-{000000}</displayFormat>
        <label>Signature Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Signature Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>