force-app/main/default/objects/KT_Signature_Request__c/fields/Completed_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Completed_Document_Id__c</fullName>
    <description>ContentDocument Id of the final signed document.</description>
    <label>Completed Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>