force-app/main/default/objects/KT_Signature_Request__c/fields/Completed_Signers__c.field-meta.xml
<CustomField>
    <fullName>Completed_Signers__c</fullName>
    <description>Count of child signer records where Status is Signed. Maintained by B4 status sync automation.</description>
    <label>Completed Signers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>