force-app/main/default/objects/KT_Signature_Request__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Deadline for all signatures. Used by scheduled expiry escalation.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>