force-app/main/default/objects/KT_Signature_Request__c/fields/External_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Envelope_Id__c</fullName>
    <description>Provider-assigned envelope or agreement identifier for webhook correlation.</description>
    <label>External Envelope Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>