force-app/main/default/objects/KT_Signature_Request__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HR Admin who triggered the signing workflow.</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Initiated Signature Requests</relationshipLabel>
    <relationshipName>InitiatedSignatureRequests</relationshipName>
    <type>Lookup</type>
</CustomField>