force-app/main/default/objects/KT_Signature_Request__c/fields/KT_DocumentVault__c.field-meta.xml
<CustomField>
    <fullName>KT_DocumentVault__c</fullName>
    <description>Document vault entry being signed.</description>
    <label>KT Document Vault</label>
    <referenceTo>KT_DocumentVault__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>SignatureRequests</relationshipName>
    <type>MasterDetail</type>
</CustomField>