force-app/main/default/objects/KT_Signature_Request__c/fields/KT_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>KT_Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent onboarding record, denormalized for reporting.</description>
    <label>KT Onboarding</label>
    <referenceTo>KT_Onboarding__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>SignatureRequests</relationshipName>
    <type>Lookup</type>
</CustomField>