force-app/main/default/objects/KT_Signature_Request__c/fields/Requires_Trusted_Agent_Identity__c.field-meta.xml
<CustomField>
    <fullName>Requires_Trusted_Agent_Identity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this signing workflow requires trusted agent identity verification before completion.</description>
    <label>Requires Trusted Agent Identity</label>
    <type>Checkbox</type>
</CustomField>