force-app/main/default/objects/KT_Signature_Request__c/fields/Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Signing_Order__c</fullName>
    <description>Controls whether signer invitations are dispatched sequentially or in parallel.</description>
    <label>Signing Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sequential</fullName><default>true</default><label>Sequential</label></value>
            <value><fullName>Parallel</fullName><default>false</default><label>Parallel</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>