force-app/main/default/objects/KT_Signature_Request__c/fields/Signing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Signing_Provider__c</fullName>
    <description>E-signature provider used for this workflow.</description>
    <label>Signing Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KT Sign</fullName>
                <default>true</default>
                <label>KT Sign</label>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Adobe Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>