force-app/main/default/objects/KT_Signature_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Overall signing workflow status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Configured</fullName><default>true</default><label>Configured</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Partially Signed</fullName><default>false</default><label>Partially Signed</label></value>
            <value><fullName>Fully Signed</fullName><default>false</default><label>Fully Signed</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>