force-app/main/default/objects/KT_Signature_Request__c/fields/Total_Signers__c.field-meta.xml
<CustomField>
    <fullName>Total_Signers__c</fullName>
    <description>Total number of required signers.</description>
    <label>Total Signers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>