force-app/main/default/objects/KT_Signature_Request__c/fields/Trusted_Agent_Verification_Reference__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Agent_Verification_Reference__c</fullName>
    <description>External or mobile-push verification reference for trusted agent identity evidence.</description>
    <label>Trusted Agent Verification Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>