force-app/main/default/objects/KT_Signature_Request__c/fields/Trusted_Agent_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Agent_Verification_Status__c</fullName>
    <description>Trusted agent identity verification state for high-value SOX/HIPAA signatures.</description>
    <label>Trusted Agent Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Required</fullName><default>true</default><label>Not Required</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>