force-app/main/default/objects/KT_Signature_Request__c/fields/Trusted_Agent_Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Agent_Verified_At__c</fullName>
    <description>Timestamp when trusted agent identity verification was confirmed.</description>
    <label>Trusted Agent Verified At</label>
    <type>DateTime</type>
</CustomField>